# moosedev

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  start-moosedev.sh
.claude/: settings.json
.claude/hooks/: moosedev-capture.sh  moosedev-gate.sh  moosedev-push.sh
.claude/skills/bootstrap-existing-codebase/: SKILL.md
.claude/skills/generate-adrs-from-graph/: SKILL.md
.claude/skills/temporal-episode-capture/: SKILL.md
.codex/: config.toml
.github/workflows/: release.yml
.moosedev/: kg.nq
.opencode/plugins/: README.md  moosedev-push.ts
bench/: .gitignore  BLOG_DRAFT.md  EVALUATION.md  RESULTS.md  aa_retrieval_snapshot.py  bootstrap_rust_rfcs.py  bootstrap_trivyn.py  capability_build.py  capability_probe.py  capability_report.py  config.py  doc_bootstrap.py  ecological_report.py  export_corpus.py  grade.py  grade_code.py  grade_set.py  hybrid_ab_report.py  hybrid_seed_recall.py  judge_recovery.py  mcp_client.py  mem0_build.py  nlq_eval.py  parity_check.py  regrade.py  regrade_judge.py  requirements.txt  run.py  run_burrow_currency.sh  run_burrow_tb.sh  run_capability.sh  run_hybrid_ab.sh  run_hybrid_seed_recall.sh  run_overnight.sh  run_scale_degradation.sh  run_trial_month.sh  run_trivyn_currency.sh  run_trivyn_tb.sh  scale_build.py  scale_decomp_facet.py  (+8 more)
bench/arms/B0/: AGENTS.md
bench/arms/B1-md/: AGENTS.md
bench/arms/B1-notes/: AGENTS.md
bench/arms/B1-rag/: AGENTS.md
bench/arms/B2/: AGENTS.md
bench/freetext_mcp/: server.py
bench/mem0_mcp/: server.py
bench/nlq_eval/: queries.jsonl
bench/tasks_public/burrow/: shared_privacy_requirement.json
bench/tasks_public/burrow-temporal/: quickstart_currency.json  report_voice_currency.json  rest_rss_currency.json
bench/tasks_public/codegraph/: cur_mcp_handshake.json  mh_motivation_of_superseder.json  mh_req_through_constraint.json  neg_accepted_ads_no_rationale.json  neg_constraints_no_rationale.json  rel_telemetry_privacy.json  rel_value_ref_edges.json  set_accepted_constraints.json  set_all_constraints.json  set_all_lessons.json  set_all_requirements.json  set_deprecated_records.json  set_proposed_ads.json  set_superseded_ads.json  sup_all_superseded.json  sup_current_replacements.json  sup_head_of_reversal.json
bench/tasks_public/moosedev/: no_hardcoded_ontology_iri.json  shared_backend.json
bench/tasks_public/moosedev-temporal/: connect_daemon_currency.json  glrc_currency.json  ontology_currency.json  supersede_scope_currency.json
bench/tasks_public/rust-rfcs/: integer_fallback_reversal.json  private_fields.json  question_mark_operator.json
clients/emacs/: README.md  moosedev.el
clients/nvim/: README.md  conformance.lua  conformance.sh  moosedev.lua
clients/vscode/: .vscodeignore  README.md  package-lock.json  package.json
clients/vscode/src/: extension.ts
clients/vscode/test/: opencode-identity.test.ts
clients/zed/: Cargo.toml  README.md  extension.toml  extension.wasm
clients/zed/src/: lib.rs
docs/: install.md  quickstart.md
examples/: audit_labels.rs  backfill_concerns.rs  capgap_probe.rs  growl_enrich_probe.rs  migrate_namespace.rs  migrate_substrate_symbol.rs  normalize_lifecycle_status.rs  relabel_apply.rs  seed_citations.rs
ontologies/: architecture.ttl  software-architecture.ttl  software-architecture_shapes.ttl  software-code.ttl  software-code_shapes.ttl  software-engineering.ttl  software-engineering_shapes.ttl
packaging/homebrew/: moosedev.rb  render-formula.sh
scripts/: build-release.sh  generate-adrs-from-graph.py  install.sh  test_generate_adrs_from_graph.py
skills/: bootstrap-existing-codebase.md  generate-adrs-from-graph.md  temporal-episode-capture.md
spec/: MOOSEDev_design.md  MOOSEDev_spec.md  MOOSEDev_v2_spec.md  architecture-ontology-brief.md  code-ontology-brief.md  core-moose-asks.md  supersede-and-relations.md
src/: adrs.rs  artifacts.rs  canonical.rs  constraints.rs  export.rs  graph_import.rs  init.rs  lessons.rs  lib.rs  main.rs  requirements.rs  runtime.rs  sparql.rs  temporal.rs  validation.rs
src/alignment/: mod.rs
src/api/: error.rs  mod.rs  models.rs  routes.rs
src/api/handlers/: adrs.rs  chat.rs  constraints.rs  debt.rs  export.rs  health.rs  lessons.rs  mod.rs  policy.rs  proposals.rs  records.rs  requirements.rs  sparql.rs  static_files.rs
src/code/substrate/: churn.rs  meta.rs  mod.rs  producer.rs  resolver.rs  scheduler.rs  scip.rs  symbols.rs  treesitter.rs
src/graph/: capture.rs  classify.rs  code_entities.rs  components.rs  context.rs  debt.rs  dossier.rs  grounded_capture.rs  lifecycle.rs  link_code.rs  links.rs  mod.rs  proposals.rs  query.rs  relations.rs  state.rs  taxonomy.rs  util.rs
src/llm/: mod.rs
src/lsp/: mod.rs
src/mcp/: mod.rs
src/ontology/: mod.rs
src/policy/: fires.rs  mod.rs
src/provenance/: mod.rs
src/reasoning/: mod.rs
src/vectors/: mod.rs
tasks/: growl-integration.md  lessons.md  todo.md
templates/: CLAUDE.md
tests/: adrs.rs  alignment.rs  api.rs  autospawn.rs  canonical_text.rs  classify.rs  cluster_capture.rs  concurrent_clients.rs  constraints.rs  context.rs  debt.rs  declare_component_paths.rs  dossier.rs  enrich_integration.rs  export.rs  graph_import.rs  grounded_capture.rs  inline_relations.rs  lessons.rs  link_code.rs  lsp_code_actions.rs  lsp_diagnostics.rs  lsp_hover.rs  lsp_open_entity.rs  lsp_transport.rs  lsp_write_path.rs  m0_integration.rs  mcp_replies.rs  mint.rs  ontology_loader.rs  policy.rs  policy_both_hosts.rs  proposals.rs  provenance.rs  query.rs  relate.rs  requirements.rs  retract.rs  retrieval_eval.rs  se_ontology.rs  (+8 more)
tests/fixtures/: resolver_sample.json  resolver_sample_ts.json  ts_fallback.py  ts_fallback.pyi  ts_fallback.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.test.ts  App.tsx  main.tsx
ui/src/api/: client.ts  types.ts
ui/src/pages/: AdrsPage.tsx  ChatPage.test.tsx  ChatPage.tsx  ConstraintsPage.tsx  DebtPage.tsx  GraphTransferPage.tsx  LessonsPage.tsx  RatificationsPage.tsx  RecordPage.test.tsx  RecordPage.tsx  RequirementsPage.tsx  SparqlPage.tsx
(+28 files in other folders)
