[package]
name = "moosedev"
version = "0.6.2"
edition = "2021"
description = "MOOSEDev — a neurosymbolic MCP sidecar for structured, long-term project memory, built on the MOOSE engine"
license = "Apache-2.0"

[dependencies]
# The closed-source MOOSE engine, consumed as a path dependency.
# candle-cpu + arctic-s: local embedding backbone (Arctic-Embed-S, 384-dim) for alignment.
moose = { path = "../moose", features = ["candle-cpu", "arctic-s"] }

# Same oxigraph (Trivyn fork, via [patch] below) MOOSE exposes across its public API.
# `Store` crosses the moose API boundary, so moosedev must resolve the identical crate.
oxigraph = { version = "0.5.6", features = ["rdf-12"] }

# GROWL — Trivyn's OWL 2 RL reasoner (its own term model, no oxigraph dep → no [patch]
# conflict). App-layer enrichment: materializes inferred A-box edges (inverses,
# subproperty, domain/range, subclass) from the declared ontology axioms. Wired in at the
# moosedev app layer — NOT in the moose engine (invariant #11).
growl = "0.6.1"

# MCP server over stdio — the official Rust SDK. `schemars` enables tool input
# schemas (re-exported as `rmcp::schemars`, so versions always match).
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime + server plumbing. stdout is the MCP JSON-RPC channel, so logs
# (tracing) are routed to stderr in main.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = { version = "0.8", features = ["tokio", "http1", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
include_dir = { version = "0.7", features = ["glob"], optional = true }
mime_guess = { version = "2.0", optional = true }
zip = { version = "1.1.4", default-features = false }

# Instance IRI minting for recorded knowledge.
uuid = { version = "1", features = ["v4"] }

# OpenAI-compatible LLM client (the MOOSE "sensor"); local-first via env config.
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Timestamps for PROV-O edit provenance.
chrono = "0.4"

# Content hash for the committed canonical kg.nq staleness stamp (already in the
# dependency tree via sqlx; same 0.10 line).
sha2 = "0.10"

# Writes the `ontology_vectors` SQLite store that MOOSE's `VecStore::open` reads
# (MOOSE exposes no public vector-write path). Same sqlite crate + version MOOSE
# uses, so it resolves to a single build.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
# Drive the server as an MCP *client* in integration tests (real handshake +
# tools/call over the same async-rw transport the backend serves). Same rmcp
# version as the normal dep; features unify across the two.
rmcp = { version = "1.7", features = ["client", "transport-async-rw"] }
# Integration tests drive real child processes over piped stdio.
tokio = { version = "1", features = ["process"] }
axum-test = "17"

[features]
default = ["embedded-frontend"]
embedded-frontend = ["dep:include_dir", "dep:mime_guess"]
headless = []

# Build the engine's embedding backbone (Arctic-Embed-S) on the Apple GPU via
# candle's Metal backend. candle-cpu (declared on the `moose` dep above) stays the
# default for all normal/headless builds; enabling `metal` additionally compiles the
# Metal device, which moose's loader prefers at runtime (see moose embeddings loader).
# Used by the macOS release build; also works locally: `cargo run --features metal`.
# (`cuda = ["moose/candle-cuda"]` is the NVIDIA analogue if ever needed.)
metal = ["moose/candle-metal"]

[[example]]
name = "backfill_concerns"
path = "examples/backfill_concerns.rs"
test = true

[[example]]
name = "migrate_namespace"
path = "examples/migrate_namespace.rs"
test = true

[patch.crates-io]
# Mirror of moose/Cargo.toml: pin every oxigraph-workspace crate to the Trivyn fork.
# Required because oxigraph types (Store, NamedNode, …) cross MOOSE's public API and
# must be the SAME crate version in both moose and moosedev.
oxigraph     = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxjsonld     = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxrdf        = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxrdfio      = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxrdfxml     = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxsdatatypes = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
oxttl        = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
sparesults   = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
spareval     = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
spargebra    = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
sparopt      = { git = "https://github.com/Trivyn/oxigraph-trivyn.git", branch = "main" }
